Returning api.key so project can be cloned and tested without need to register for api key